--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 
 [dependencies]
 async-trait = "0.1.89"
-axum = "0.8.6"
+axum = { version = "0.8.6", features = ["macros"] }
 lazy-regex = "3.4.1"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
